public/static/css/main.styl
@font-face {
    font-family: 'OpenSans'
    src url('/static/fonts/OpenSans-Regular-webfont.eot')
    src url('/static/fonts/OpenSans-Regular-webfont.eot?#iefix') format('embedded-opentype')\,
         url('/static/fonts/OpenSans-Regular-webfont.woff') format('woff')\,
         url('/static/fonts/OpenSans-Regular-webfont.ttf') format('truetype')\,
         url('/static/fonts/OpenSans-Regular-webfont.svg#open_sansregular') format('svg');
    font-weight: normal
    font-style: normal
}

@font-face {
    font-family 'OpenSansLight'
    src url('/static/fonts/OpenSans-Light-webfont.eot?#iefix') format('embedded-opentype')\,
         url('/static/fonts/OpenSans-Light-webfont.woff') format('woff')\,
         url('/static/fonts/OpenSans-Light-webfont.ttf') format('truetype')\,
         url('/static/fonts/OpenSans-Light-webfont.svg#open_sanslight') format('svg');
    font-weight normal
    font-style normal
}

html, body
  font-family OpenSans
  background url("/static/img/bg.png") no-repeat top right
  background-color #f1efe8
  margin 0
  height: 100%

#page
  min-height 100%
  top 10px
  width 960px
  margin-left auto
  margin-right auto
  position relative

#header
  top 0
  width 960px
  margin-left auto
  margin-right auto
  position relative

img
  border 0

#logo
  margin-top 20px

#mainContent
  position relative
  padding-bottom 30px

a
  text-decoration none !important
  color #7ca1cf

#follow-on-twitter
  right 0
  position absolute

#navbar
  top 55px
  right 125px
  position absolute
  font-size 15pt

.persona-buttons
  top 76px
  right 0px
  position absolute

#login, #logout
  top 0

.persona-button span
  padding-left 44px
  font-size 11pt
  color #fff

.persona-button span:hover
  color #fff

#body_index #navbar-lessons,
#body_video #navbar-lessons,
#body_exercise #navbar-lessons,
#body_cheatsheet #navbar-cheatsheet,
#body_about #navbar-about,
#body_profile #navbar-profile,
#body_admin #navbar-admin,
#body_tags #navbar-tags
  //font-weight bold
  border-bottom 3px solid #a8b4c3

#navbar li
  display inline
  list-style-type none
  margin-left 32px

#navbar li a
  color #000

#legend
  font-size 13pt
  position absolute
  right 0
  top 170px
  margin-right 10px

#legend ul
  list-style none
  margin-left 15px
  margin-top 0
  margin-bottom 0
  text-align right

#legend li
  display inline-block
  list-style-type none
  margin-left 20px

#body_index ul.videos a
  color #0f1936

#mainTitle
  margin-top 0
  margin-bottom 0
  font-size 40pt
  font-family OpenSansLight

#footer img
  vertical-align middle

.card-container h1
  font-size 30pt
  padding-bottom 0px
  color #9bc5cf

#body_video .card-container h1
  font-size 20pt

.card-container
  background-color #fff
  padding-top 5px
  padding-bottom 20px
  padding-left 20px
  padding-right 20px
  margin-top 30px
  margin-bottom 30px
  border-radius 25px

.legend-item
  width 13px
  height 13px
  display inline-block
  border-style solid
  border-width 1px
  margin-left 10px
  margin-right 10px

#watched-legend-item
  background-color #db832a

#unavailable-legend-item
  background-color #d9d9d9

#unwatched-legend-item
  background-color #9bc5cf

#video-bottom-toolbar
  width 900px

#tags
  display inline-block
  margin-top: 6px;
  font-size 13pt

#tags > span
  float left
  font-weight bold
  color #2c4f97

#tags ul
  float left
  list-style none
  margin-left 0
  padding-left 0
  margin-top 0

#tags li
  display inline
  margin-top 10px
  margin-left 10px

#tags li a
  padding 5px
  background-color #f9f9f9
  border-bottom 2px solid #999999
  border-right 2px solid #999999
  border-left 2px solid #dddddd
  border-top 2px solid #dddddd
  border-radius 10%

.clear
  clear both

#subnav
  float right
  display inline-block
  margin-top: 4px;

#subnav ul
  list-style none
  float right
  margin-left 0
  padding-left 0
  margin-top 0

#subnav li
  display inline
  margin-left 10px

#links div 
  padding-bottom: 4px
  border-bottom 2px solid #f6f6f6

#links ul
  margin-left 0
  padding-left 0
  margin-top 0
  padding-top 0

#links li
  list-style-type none
  padding-bottom 12px
  padding-top 12px
  margin-top 0
  border-bottom 2px solid #f6f6f6

ul.videos
  margin-left 0
  padding-left 0

ul.videos li
  list-style-type none
  border-top 2px solid #f6f6f6
  padding-top 15px
  margin-bottom 15px
  margin-left 0
  padding-left 0
  font-size 15pt

ul.videos li span
  background url("/static/img/video-unavailable.png") no-repeat top left
  line-height 48px
  height 48px
  vertical-align middle
  padding 0px 0 0 62px
  display inline-block
  color #a3a096

ul.videos a span
  background url("/static/img/video-available.png") no-repeat top left
  color #000

ul.videos span.completed
  background url("/static/img/video-completed.png") no-repeat top left
  color #000

ul.videos li.exercise span
  background url("/static/img/exercise-unavailable.png") no-repeat top left

ul.videos li.exercise a span
  background url("/static/img/exercise-available.png") no-repeat top left

ul.videos li.exercise span.completed
  background url("/static/img/exercise-completed.png") no-repeat top left

.cleanslate .unisubs-widget
  margin-bottom 5px !important

.wrapper
  min-height 100%
  height auto !important
  height 100%
  margin 0 auto -60px
  
.push
  height 60px

#footer
  color #fff
  background-color #363f48
  height 60px

#footer a
  color #fff
  font-weight normal

#footer li
  display inline-block
  list-style-type none

#footer ul.navigation
  left 15px
  position absolute

#footer ul.social
  right 15px
  position absolute

#footer ul.social li
  padding-left 10px
  padding-right 10px

#footer ul.navigation li + li::before
  content " / "
  padding 10px

#footer ul.navigation li + li:before
  content " / "
  padding 10px

#footer ul.navigation li + li
  margin-left 5px
  margin-right 5px

#code
  margin 0
  width 900px
  height 300px
  margin-left auto
  margin-right auto
  border 2px solid #f6f6f6


#whitelist, #blacklist
  list-style none
  margin-left 0
  padding-left 0

#whitelist li, #blacklist li
  display inline-block
  list-style-type none
  padding-top 8px
  padding-bottom 8px
  border-bottom 2px solid #f6f6f6
  display block

#whitelist li i, #blacklist li i
  margin-right 10px

#whitelist li span.good, #blacklist li span.good
#whitelist li span.bad, #blacklist li span.bad
  font-style: italic
  font-weight bold

#whitelist li span.good
  color #9bc5cf

#blacklist li span.bad
  color #cf5c5c

#whitelist li span.bad, #blacklist li span.good
  color #a3a096

p.exercise-description
  padding-bottom 20px
  border-bottom 3px solid #f6f6f6
  font-size 17pt

h2
  font-size 13pt
  font-weight bold
  padding-bottom 0

input, textarea
  padding 5px
  margin-bottom 15px
  margin-top 5px
  display block
  border 2px solid #c6c6c6

textarea
  width: 500px;

input
  width: 250px;

input[type=submit]
  width 100px
  border 0px

input[readonly]
  background-color #fafaff 

#profile-container
  width 600px

.gravatar-image
  float left
  margin-right 15px

.comment-date
  color #cccccc

.comment
  background-color #f7f7f7
  padding-top 30px
  padding-bottom 20px
  padding-left 20px
  padding-right 20px
  margin-top 30px
  margin-bottom 30px
  border-radius 25px

